--- a/charts/monitoring-logging/Chart.yaml
+++ b/charts/monitoring-logging/Chart.yaml
@@ -6,14 +6,14 @@ version: 0.1.0-dev
 appVersion: "1.0-dev"
 dependencies:
   - name: loki
-    repository: "https://grafana.github.io/helm-charts"
+    repository: "@grafana"
     version: 6.27.0
     condition: loki.enabled
   - name: promtail
-    repository: "https://grafana.github.io/helm-charts"
+    repository: "@grafana"
     version: 6.16.6
     condition: promtail.enabled
   - name: grafana
-    repository: "https://grafana.github.io/helm-charts"
+    repository: "@grafana"
     version: 8.10.1
     condition: grafana.enabled
