--- a/charts/monitoring-logging/promtail/values.yaml
+++ b/charts/monitoring-logging/promtail/values.yaml
@@ -4,7 +4,8 @@ config:
     logLevel: warn
   # -- publish data to loki
     clients:
-      - tenant_id: 1 
+      - url: http://loki-gateway/loki/api/v1/push
+        tenant_id: 1 
 image:
   registry: REP_ACR_NAME_REP.azurecr.io
   # Repository name for the Promtail image
