--- a/charts/podiumd/templates/keycloak-config-configmap.yaml
+++ b/charts/podiumd/templates/keycloak-config-configmap.yaml
@@ -487,7 +487,7 @@ data:
             protocol: openid-connect
             protocolMapper: oidc-usermodel-realm-role-mapper
     users:
-      - username: "service-account-zac-admin-client"
+      - username: "service-account-{{ .Values.zac.keycloak.adminClient.id }}"
         enabled: "true"
         totp: "false"
         serviceAccountClientId: "{{ .Values.zac.keycloak.adminClient.id }}"
