--- a/charts/monitoring-logging/values.yaml
+++ b/charts/monitoring-logging/values.yaml
@@ -161,7 +161,7 @@ loki:
           prefix: loki_index_
           period: 24h
   storage_config:
-     azure:
+    azure:
       account_name: "<INSERT-STORAGE-ACCOUNT-NAME>" 
       container_name: "<CHUNK-CONTAINER-NAME>" # Your actual Azure Blob Storage container name (loki-azure-dev-chunks)
       use_federated_token: true # Use federated token for authentication
@@ -196,7 +196,8 @@ loki:
   limits_config:
     allow_structured_metadata: true
     volume_enabled: true
-    retention_period: 672h # 28 days retention
+    retention_period: 744h # 1 month retention
+    max_query_lookback: 744h # 1 month
     ingestion_rate_strategy: local # Default: global
     max_global_streams_per_user: 10000
     max_query_length: 744h # 1 month. Default: 721h
@@ -207,6 +208,11 @@ loki:
   compactor:
     retention_enabled: true 
     delete_request_store: azure
+    working_directory: /data/retention
+    compaction_interval: 10m
+    retention_enabled: true
+    retention_delete_delay: 2h
+    retention_delete_worker_count: 150
   
   ruler:
     enable_api: true
@@ -316,11 +322,6 @@ chunksCache:
   defaultValidity: 6h # Shorter TTL = fresher results
   allocatedMemory: 1024
   defaultValidity: 8h
-
-# -- Keep log data up to 3 months
-table_manager:
-  retention_deletes_enabled: true
-  retention_period: 90d
   
 monitoring:
   selfMonitoring:
