--- a/charts/monitoring-logging/grafana/values.yaml
+++ b/charts/monitoring-logging/grafana/values.yaml
@@ -30,12 +30,12 @@ adminPassword: "KV_GRAFANA_ADMIN_KV"
 
 resources:
   requests:
-    cpu: "10m"
-    memory: "96Mi"
+    cpu: 100m
+    memory: 256Mi
   limits:
-    cpu: "50m"
-    memory: "128Mi"
-
+    cpu: 200m
+    memory: 512Mi
+    
 nodeSelector:
   kubernetes.azure.com/mode: system
 
