Added prometheus chart

--- a/charts/monitoring-logging/.github/workflows/release.yaml
+++ b/charts/monitoring-logging/.github/workflows/release.yaml
@@ -31,6 +31,7 @@ jobs:
           helm repo add dimpact https://Dimpact-Samenwerking.github.io/helm-charts
           helm repo add grafana https://grafana.github.io/helm-charts
           helm repo add opentelemetry https://open-telemetry.github.io/opentelemetry-helm-charts
+          helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
           helm repo update
 
       - name: Run chart-releaser
