--- a/charts/monitoring-logging/values.yaml
+++ b/charts/monitoring-logging/values.yaml
@@ -132,6 +132,12 @@ grafana:
     finalizers:
       - kubernetes.io/pvc-protection
 
+prometheus: 
+  enabled: true
+
+alertmanager:
+  enabled: false
+
 promtail:
   enabled: true
   config:
