feat: fixed default kiss email settings and quoted where needed

--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -758,10 +758,10 @@ kiss:
 
   email:
     host: ""
-    port: null
+    port: "587"
     username: ""
     password: ""
-    enableSSL: null
+    enableSSL: "true"
     feedbackFrom: ""
     feedbackTo: ""
 
