--- a/charts/podiumd/templates/frontend-config.yaml
+++ b/charts/podiumd/templates/frontend-config.yaml
@@ -15,11 +15,11 @@ data:
   EMAIL_HOST: {{ .Values.kiss.email.host | quote }}
   {{- end }}
   {{- if .Values.kiss.email.port }}
-  EMAIL_PORT:  {{ .Values.kiss.email.port }}
+  EMAIL_PORT:  {{ .Values.kiss.email.port | quote }}
   {{- end }}
   ENTERPRISE_SEARCH_BASE_URL: {{ default (printf "https://kiss-ent-http.%s.svc.cluster.local:3002" .Release.Namespace) .Values.kiss.enterpriseSearch.baseUrl | quote }}
   {{- if .Values.kiss.email.enableSSL }}
-  EMAIL_ENABLE_SSL: {{ .Values.kiss.email.enableSSL }}
+  EMAIL_ENABLE_SSL: {{ .Values.kiss.email.enableSSL | quote }}
   {{- end }}
   {{- if .Values.kiss.email.feedbackFrom }}
   FEEDBACK_EMAIL_FROM: {{ .Values.kiss.email.feedbackFrom | quote }}
